--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,7 @@
 	<properties>
 		<java.version>1.6</java.version>
 		<maven.deploy.skip>true</maven.deploy.skip>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
 	<build>
 		<sourceDirectory>src</sourceDirectory>
